--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="nav-logo">
               <a class="navbar-brand" href="index.html"
                 ><img
-                  src="./asset/image/CabinetMark LLC (1).png"
+                  src="./asset/image/logo.png"
                   alt="logo"
                   loading="lazy"
               /></a>
@@ -224,7 +224,7 @@
                 </div>
                 <div class="small-image">
                   <img
-                    src="./asset/image/Mask group (1).png"
+                    src="./asset/image/Maskgroup(1).png"
                     alt="small image"
                     loading="lazy"
                   />
@@ -309,7 +309,7 @@
             </div>
             <div class="col3">
               <div class="offer-card">
-                <img src="./asset/image/Group 1707488684.png" alt="" />
+                <img src="./asset/image/Group1707488684.png" alt="" />
                 <h3>Big Saving Shop</h3>
                 <p>lorem ipsum simply dummy</p>
               </div>
@@ -323,7 +323,7 @@
             </div>
             <div class="col3">
               <div class="offer-card">
-                <img src="./asset/image/Group 1707488682.png" alt="" />
+                <img src="./asset/image/Group1707488682.png" alt="" />
                 <h3>Quality Matches Price</h3>
                 <p>lorem ipsum simply dummy</p>
               </div>
@@ -340,9 +340,9 @@
             <div class="col7">
               <div class="image-container">
                 <div class="left-image">
-                  <img src="./asset/image/image (1).png" alt="" />
+                  <img src="./asset/image/image(1).png" alt="" />
                   <div class="right-image">
-                    <img src="./asset/image/image (2).png" alt="" />
+                    <img src="./asset/image/image(2).png" alt="" />
                   </div>
                 </div>
               </div>
