--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <div class="aboutus-image">
                 <div class="large-image">
                   <img
-                    src="./Asset/image/image.png"
+                    src="./asset/image/largeimage.png"
                     alt="large image"
                     loading="lazy"
                   />
@@ -340,7 +340,7 @@
             <div class="col7">
               <div class="image-container">
                 <div class="left-image">
-                  <img src="./asset/image/image(1).png" alt="" />
+                  <img src="./asset/image/largeimage.png" alt="" />
                   <div class="right-image">
                     <img src="./asset/image/image(2).png" alt="" />
                   </div>
